Working version of app before adding jwt